added an inialize function for timeslot. Changed createdTimeslot function to rearrange timeslot order based on times entered

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 			<div class="home-formContainerOuter">
 					<div class="calendar-ContainerInner">
 					<h2 id="weekly-calendar">Weekly Calendar</h2><br>
-					<p id="instructions">Instructions: Click the "+" sign to add a new time slot, or the red "x" to delete a time slot</p>
+					<p id="instructions">Instructions: Click the "+" sign to add a new time slot, or the red "x" to delete a time slot. 
+					Input time range must be at least 2 hours long.</p>
 						<div class="calendar-wrap">
 								<div class="calendar-cell"><!--day0-->
 								<div class="dateblock-wrap">
